sg.tf
resource "aws_security_group" "squidproxy" {
  name        = "squid-proxy"
  vpc_id      = var.vpc_id

  tags = {
    Name = "squid-proxy"
  }

  ingress {
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 3128
    to_port     = 3128
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = -1
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
